samples/_failures_safe/1761596652_38c393_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_e77f9897.c: In function ‘display_high_severity_entries’:
./samples/SAFE/__tmp_e77f9897.c:133:20: error: missing terminating " character
  133 |             printf("[%s] %s: %
      |                    ^~~~~~~~~~~
./samples/SAFE/__tmp_e77f9897.c:133:13: error: expected expression at end of input
  133 |             printf("[%s] %s: %
      |             ^~~~~~
./samples/SAFE/__tmp_e77f9897.c:133:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_e77f9897.c:133:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_e77f9897.c:133:13: error: expected declaration or statement at end of input
